fix spilling date selection

--- a/src/styles/views/booking-widget.less
+++ b/src/styles/views/booking-widget.less
@@ -93,12 +93,15 @@ booking-widget-add-room form-element {
 
     border-radius: 4px;
     height: 24px;
+    overflow: hidden;
     width: ~"calc(100% - 40px)";
 
     background: #fff;
     color: #555;
 
     line-height: 24px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     transform: translateY(-50%);
 
